# energycrawler

./: .env.example  .env.quickstart.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  package-lock.json  pyproject.toml  requirements-core.txt  requirements-optional.txt  requirements.txt  var.py
api/: __init__.py  main.py  response.py
base/: __init__.py  base_crawler.py
cache/: __init__.py  abs_cache.py  cache_factory.py  local_cache.py  redis_cache.py
cmd_arg/: __init__.py  arg.py
config/: __init__.py  base_config.py  db_config.py  runtime_snapshot.py  xhs_config.py
database/: __init__.py  db.py  db_session.py  models.py  mongodb_store_base.py
docs/: data_storage_guide.md  excel_export_guide.md  field_mapping_xhs_x.md  hit_stopwords.txt  index.md  原生环境管理文档.md  常见问题.md  手机号登录说明.md  项目代码结构.md  项目架构文档.md
energy-service/: QUICK_REFERENCE.md  README.md  README_INTEGRATION.md  go.mod  go.sum  main.go  start-macos.sh
energy_client/: README.md  __init__.py  browser_interface.py  browser_pb2.py  browser_pb2_grpc.py  client.py  energy_helper.py  pyproject.toml
energy_cluster/: README.md
media_platform/: __init__.py
model/: __init__.py  m_xiaohongshu.py
proxy/: __init__.py  base_proxy.py  proxy_ip_pool.py  proxy_mixin.py  types.py
scripts/: auth_cli.py  check_login_state.py  check_xhs_signature_runtime.py  energy_service_cli.py  energy_service_healthcheck.py  energycrawler_cli.py  ensure_energy_service.sh  export_cookies_to_env.py  recv_sms.py  sync_webui_assets.sh  xhs_open_login_and_sync.py  xhs_qr_login_flow.py
tools/: utils.py  (+19 more)
(+160 files in other folders)
